--- a/helm-chart/sefaria-project/values.yaml
+++ b/helm-chart/sefaria-project/values.yaml
@@ -364,3 +364,5 @@ localSettings:
   GLOBAL_WARNING: "False"
   GLOBAL_WARNING_MESSAGE: "Sefaria will be in <b>Read-Only</b> mode for scheduled maintenance from 4:45pm-6:45pm Pacific time. Edits will <b>not</b> be saved during that time."
   SITE_PACKAGE: "sites.sefaria"
+  DEFAULT_FROM_EMAIL: "Sefaria <hello@sefaria.org>"
+  SERVER_EMAIL: "dev@sefaria.org"
