--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
                     {"type": "refactor", "hidden": true},
                     {"type": "perf", "hidden": true},
                     {"type": "test", "hidden": true},
-                    {"type": "static", "section": "Static Content"}
+                    {"type": "static", "section": "Static Content"},
                     {"type": "helm", "hidden": true}
                   ]
                 },
@@ -48,7 +48,7 @@ jobs:
                     {"type": "refactor", "hidden": true},
                     {"type": "perf", "hidden": true},
                     {"type": "test", "hidden": true},
-                    {"type": "static", "section": "Static Content"}
+                    {"type": "static", "section": "Static Content"},
                     {"type": "helm", "hidden": true}
                   ]
                 },
