--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -149,4 +149,5 @@ jobs:
           GIT_COMMIT: "${{ needs.workflow-check.outputs.ref }}"
           PROJECT_ID: "${{ secrets.PROD_GKE_PROJECT }}"
           NAMESPACE: "${{secrets.PROD_GKE_NAMESPACE}}"
+          IMAGE_NAME: "${{ secrets.IMAGE_NAME }}"
           CHART_VERSION: 0.0.34
