helm(web): make logging secret optional

--- a/helm-chart/sefaria-project/templates/rollout/web.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/web.yaml
@@ -177,6 +177,7 @@ spec:
         - name: logging-secret
           secret:
             secretName: {{ template "sefaria.secrets.logging" . }}
+            optional: true
         - name: varnish-secret
           secret:
             secretName: {{ template "sefaria.secrets.varnish" . }}
