--- a/helm-chart/sefaria-project/templates/rollout/linker.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/linker.yaml
@@ -180,6 +180,7 @@ spec:
         - name: logging-secret
           secret:
             secretName: {{ template "sefaria.secrets.logging" . }}
+            optional: true
         - name: varnish-secret
           secret:
             secretName: {{ template "sefaria.secrets.varnish" . }}
