fix: tidy up monitor rollout+service

--- a/helm-chart/sefaria-project/templates/rollout/monitor.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/monitor.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   strategy:
     blueGreen:
-      activeService: monitor-{{ .Values.deployEnv }}-{{ .Release.Revision }}
+      activeService: monitor-{{ .Values.deployEnv }}
       autoPromotionEnabled: true
       prePromotionAnalysis:
         templates:
