--- a/helm-chart/sefaria-project/templates/service/monitor.yaml
+++ b/helm-chart/sefaria-project/templates/service/monitor.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: monitor-{{ .Values.deployEnv }}-{{ .Release.Revision }}
+  name: monitor-{{ .Values.deployEnv }}
   labels:
     app: monitor-{{ .Values.deployEnv }}
     deployEnv: "{{ .Values.deployEnv }}"
@@ -11,4 +11,3 @@ spec:
   - port: 80
   selector:
     app: monitor-{{ .Values.deployEnv }}
-    releaseRevision: "{{ .Release.Revision }}"
