helm(linker): enable gpu resource requests in linker rollout

--- a/helm-chart/sefaria-project/templates/rollout/linker.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/linker.yaml
@@ -59,6 +59,7 @@ spec:
             topologyKey: kubernetes.io/hostname
         nodeAffinity:
           {{- include "sefaria.nodeAffinities" . | nindent 10 }}
+      tolerations: {{ toYaml .Values.linker.tolerations | nindent 8 }}
       serviceAccountName: "{{ .Values.linker.serviceAccount }}"
       containers:
       - name: linker
