--- a/helm-chart/sefaria-project/templates/configmap/upload-mongo-dumps.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/upload-mongo-dumps.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.backup.enabled }}
+{{- if .Values.backup.mongo.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -10,7 +10,7 @@ data:
   upload-dumps.sh: |-
     #!/usr/bin/env bash
     set -x
-    {{- if .Values.backup.serviceAccount }}
+    {{- if .Values.backup.mongo.serviceAccount }}
     gloud auth activate
     {{- else }}
     gcloud auth activate-service-account --key-file ${GOOGLE_APPLICATION_CREDENTIALS}
