--- a/helm-chart/sefaria-project/values.yaml
+++ b/helm-chart/sefaria-project/values.yaml
@@ -47,7 +47,7 @@ backup:
     enabled: false
     version: 10.3
     prefix: ""
-    bucket: sefaria-mongo-backup
+    bucket: sefaria-user-backup
     serviceAccount: database-backup-write
 
 web:
