--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -74,11 +74,14 @@ jobs:
           file: ./build/${{ matrix.app }}/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  build-asset:
+  build-derived:
     runs-on: ubuntu-latest
     needs:
       - build-generic
       - workflow-check
+    strategy:
+      matrix:
+        app: [ asset, linker ]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -101,7 +104,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            gcr.io/${{ secrets.PROD_GKE_PROJECT }}/${{ secrets.IMAGE_NAME }}-asset
+            gcr.io/${{ secrets.PROD_GKE_PROJECT }}/${{ secrets.IMAGE_NAME }}-${{ matrix.app }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=tag
@@ -113,8 +116,8 @@ jobs:
       - name: build and push
         uses: docker/build-push-action@v2
         with:
-          cache-from: type=registry, ref=${{ secrets.IMAGE_NAME }}-asset/cache
-          cache-to: type=registry, ref=${{ secrets.IMAGE_NAME }}-asset/cache, mode=max
+          cache-from: type=registry, ref=${{ secrets.IMAGE_NAME }}-${{ matrix.app }}/cache
+          cache-to: type=registry, ref=${{ secrets.IMAGE_NAME }}-${{ matrix.app }}/cache, mode=max
           context: .
           push: true
           build-args: |
@@ -125,7 +128,7 @@ jobs:
   prod-deploy:
     runs-on: ubuntu-latest
     needs: 
-      - build-asset
+      - build-derived
       - workflow-check
     steps:
       - name: Checkout Code
