--- a/helm-chart/sefaria-project/templates/configmap/upload-pg-dumps.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/upload-pg-dumps.yaml
@@ -17,16 +17,16 @@ data:
     {{- end }}
     cd "/pgdumps/shared_volume"
     today="$(date +'%d.%m.%y')"
-    last_month="$(date --date='last month' +'%d.%m.%y')"
+    last_month="$(date --date='28 day ago' +'%d.%m.%y')"
 
-    gsutil rm "gs://${BUCKET}/${PREFIX}postgres_dump_${last_month}.tar.gz"
+    gsutil rm "gs://${BUCKET}/${PREFIX}postgres_${last_month}.dump"
 
-    if [ -f "postgres_dump.tar.gz" ]; then
+    if [ -f "pg.dump" ]; then
         echo "uploading private dump"
-        gsutil cp postgres_dump.tar.gz "gs://${BUCKET}/${PREFIX}postgres_dump_${today}.tar.gz"
+        gsutil cp pg.dump "gs://${BUCKET}/${PREFIX}postgres_${today}.dump"
     else
         echo "Private dump missing"
     fi
 
-    curl -X POST --data-urlencode 'payload={"channel": "#engineering", "username": "Data Archiver", "text": "The {{ .Values.deployEnv }} Postgres Database was routinely dumped to cloud storage: '"$(date)"'", "icon_emoji": ":cloud:"}' ${SLACK_URL}
+    curl -X POST --data-urlencode 'payload={"channel": "#engineering", "username": "Data Archiver", "text": "The production Postgres Database was routinely dumped to cloud storage: '"$(date)"'", "icon_emoji": ":cloud:"}' ${SLACK_URL}
 {{- end }}
